# LLMCookieBridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/llm_cookie_bridge/: __init__.py  client.py  exceptions.py  sse.py  types.py  utils.py
src/llm_cookie_bridge/providers/: __init__.py  base.py  chatgpt.py  claude.py  gemini.py  perplexity.py
tests/: test_chatgpt.py  test_claude.py  test_gemini.py  test_perplexity.py  test_refresh.py  test_security_defaults.py  test_utils.py
