[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "llm-cookie-bridge"
version = "0.1.0"
description = "Unified async cookie/session bridge for major AI web apps."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "tkgo11" }]
keywords = ["async", "cookies", "chatgpt", "claude", "gemini", "perplexity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/tkgo11/LLMCookieBridge"
Repository = "https://github.com/tkgo11/LLMCookieBridge"
Issues = "https://github.com/tkgo11/LLMCookieBridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cookie_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
